new data version, closures coming to an end